Fixed several layout issues.

--- a/src/app/host/host.component.scss
+++ b/src/app/host/host.component.scss
@@ -11,6 +11,9 @@
         tr.host:not(.expanded-row):active {
             background: #efefef;
         }
+        tr.host:not(.expanded-row) + .details-header .details-container {
+            padding-bottom: 0;
+        }
         tr.details-header {
             height: 0;
 
@@ -19,8 +22,11 @@
                 overflow: hidden;
                 padding: 0 10px 10px 46px;
 
+                h3 {
+                    margin-top: 4px;
+                }
                 .key {
-                    min-width: 150px;
+                    min-width: 160px;
                     font-weight: 600;
                 }
                 .value {
